--- a/multiple_variable.ipynb
+++ b/multiple_variable.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNjHaB7x+kAO1FqydiDzsuA",
+      "authorship_tag": "ABX9TyOVkHtmiGWf+efQNwh4uCE4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,20 @@
         "id": "xksMMGl7Zejn"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "from sklearn.linear_model import LogisticRegression"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "HeZagP5Ycu3J"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
