separate train and test data

--- a/Train_Test_Split.ipynb
+++ b/Train_Test_Split.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNrjYVvSfAXE4cz+8ElNES2",
+      "authorship_tag": "ABX9TyMLibirG5cyxIQ0rhiog3uZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
       "metadata": {
         "id": "cpwdLKlU0ZdR"
       },
-      "execution_count": 3,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -71,19 +71,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0zgz-c_i0iA8",
-        "outputId": "cc345de4-2e90-4252-db8b-0b501ffd6865"
+        "outputId": "3f638515-5b27-40e5-85ee-a78196f0f04b"
       },
-      "execution_count": 4,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([19,  6,  4, 13,  2, 12, 18, 10,  9, 20, 15,  3,  1,  8, 11, 14])"
+              "array([ 8,  3,  4,  1,  2, 10, 12, 13,  6,  5, 17, 20, 14, 19, 15,  7])"
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 10
         }
       ]
     },
@@ -141,9 +141,65 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#get a randomly selected values from a certain intervals\n",
+        "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=5)\n",
+        "x_train"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RkkvXTdX0tv6",
+        "outputId": "2728ead0-d379-42c5-f311-4494010028f8"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([13,  2, 12, 11, 14, 19,  8,  5,  9, 10,  1, 17,  7, 16, 15,  4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#get values in an order -> by default shuffle = true\n",
+        "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, shuffle=False)\n",
+        "x_train"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xbGyUeSX1ZAD",
+        "outputId": "f2293c21-a43f-49a1-c0b5-eb8cb1516acc"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "RkkvXTdX0tv6"
+        "id": "kAGLX_dF1nML"
       },
       "execution_count": null,
       "outputs": []
